GMX-346: Fix issue of overlay image stretch in mobile

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -120,6 +120,10 @@ div.full-width-embed-first-row iframe {
   background: #000000;
 }
 
+.width-custom{
+  width:auto;margin: 0 auto;
+}
+
 @media (max-width: 425px) {
   .responsive-container {
     flex-direction: column;
